apps/team-b/tracing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracing
  namespace: team-b-ns1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracing
  template:
    metadata:
      labels:
        app: tracing
    spec:
      containers:
      - image: europe-docker.pkg.dev/prod-devops-runtime-0e05/prod-docker-repo/tracing:0.0.1
        imagePullPolicy: Always
        name: tracing
        ports:
          - name: http
            containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: http
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: http
        resources:
          limits:
            cpu: "1000m"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"
      restartPolicy: Always
      terminationGracePeriodSeconds: 5
