apps/team-b/tracing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracing
  namespace: team-b-ns1
spec:
  selector:
    app: tracing
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  type: ClusterIP
